--- a/PlatformIO/ESP32-IOT/platformio.ini
+++ b/PlatformIO/ESP32-IOT/platformio.ini
@@ -12,8 +12,9 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
+lib_extra_dirs = lib
 lib_deps = 
-    madhephaestus/ESP32Servo@^3.0.8
 	mobizt/Firebase ESP32 Client@^4.4.17
 	pololu/VL53L0X@^1.3.1
 	madhephaestus/ESP32Servo@^3.0.8
